--- a/lecture-scooter/src/index.css
+++ b/lecture-scooter/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.buttonas {
+  opacity: 70%;
+}
+.buttonas:hover {
+  opacity: 100%;
+}
