--- a/PC_RENT_PLATFORM/PC_RENT/src/index.css
+++ b/PC_RENT_PLATFORM/PC_RENT/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.not-found-bg {
+  background-image: url(./assets/DSC06535.JPG);
+  background-size: cover;
+  background-position: bottom;
+}
+
+.auth-bg {
+  background-image: url(./assets/pexels-dexter-fernandes-2646237.jpg);
+  background-size: cover;
+  background-position: bottom;
+}
